--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=spring_blog_2
-#datasource properties
+#datasource config
 spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-#jpa properties
+#jpa config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+#server port config
+server.port=8081
