--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.4'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
+
 }
 
 tasks.named('test') {
